--- a/about.html
+++ b/about.html
@@ -6,9 +6,13 @@
     <link rel="stylesheet" href="css/site.css">
   </head>
   <body>
+    <div class="maincontainer">
       <header>
           JS Cause
       </header>
+      <div class="title">
+          <h1>About</h1>
+      </div>
       <div class="sidemenu">
           <ul>
     
@@ -43,7 +47,6 @@
 </ul>
 
       </div>
-      <h1>About</h1>
       <div class="content">
           <p>This is the about page.  Neat.</p>
 
