download, install, docs.

--- a/features.html
+++ b/features.html
@@ -70,7 +70,9 @@
   <li><strong>Built with security in mind</strong>.  Escape content for output and set upload limits and request timeouts.</li>
 </ul>
 
-<hr />
+<p>Ready to learn more?  Check out the <a href="/tutorial.html">tutorial</a> or <a href="/docs.html">the full documentation</a>.</p>
+
+<p>Or <a href="/download.html">download JSCause here</a>.</p>
 
       </div>
       <div class="topmenu">
