Started writing docs.

--- a/install.html
+++ b/install.html
@@ -104,7 +104,7 @@ cd jscause
   <li>
     <p>Run <code class="highlighter-rouge">node jscause</code></p>
   </li>
-  <li>That’s it!  If you see <code class="highlighter-rouge">INFO: Server 0 listening on port 3000</code> on the terminal, things went well.  If not, please check the <a href="/docs.html#troubleshoot">troubleshooting section</a> of the documentation.</li>
+  <li>That’s it!  If you see <code class="highlighter-rouge">INFO: Server 0 listening on port 3000</code> on the terminal, things went well.  If not, please check the <a href="/docs.html#troubleshooting-jscause">troubleshooting section</a> of the documentation.</li>
 </ul>
 
 <hr />
