--- a/about.html
+++ b/about.html
@@ -57,6 +57,8 @@
       <div class="content">
           <p>This is the about page.  Neat.</p>
 
+<p>Give credit here.</p>
+
       </div>
       <div class="topmenu">
         <ul>
@@ -97,7 +99,7 @@
 
       </div>
       <footer>
-          &copy; 2019 EighthJouster
+          &copy; 2020 EighthJouster
       </footer>
   </body>
 </html>
