FAQ; pt. 4-7; final content.

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <title>About</title>
+    <title>About JSCause</title>
     <link rel="stylesheet" href="css/site.css">
   </head>
   <body>
@@ -52,12 +52,33 @@
       </div>
       
       <div class="title">
-          <h1>About</h1>
+          <h1>About JSCause</h1>
       </div>
       <div class="content">
-          <p>This is the about page.  Neat.</p>
+          <p>JSCause was originally developed by Rafael Pacheco-Palencia aka eighthjouster, and released under the MIT licence (meaning, you can do whatever you want with it - both non-commercially and commercially.)</p>
 
-<p>Give credit here.</p>
+<h2 id="source-code">Source code</h2>
+
+<p>The source code is hosted on Github - available at: <a href="https://github.com/eighthjouster/jscause">https://github.com/eighthjouster/jscause</a></p>
+
+<h2 id="credits">Credits</h2>
+
+<p>JSCause uses:</p>
+<ul>
+  <li><a href="https://github.com/felixge/node-formidable">Node Formidable</a>.</li>
+  <li><a href="https://github.com/parshap/node-sanitize-filename">sanitize-filename</a>.</li>
+  <li>Tthe <a href="https://github.com/pillarjs/cookies">Cookies NodeJS module</a>.</li>
+</ul>
+
+<p>Thank you!</p>
+
+<h2 id="contact-us">Contact us</h2>
+
+<ul>
+  <li>Visit us on Reddit: <a href="https://old.reddit.com/r/JSCause">https://old.reddit.com/r/JSCause</a></li>
+  <li>Contact me on Twitter: <a href="https://twitter.com/eighthjouster">@eighthjouster</a></li>
+  <li>Email: <script>document.write(['<a href="mailto:8j', 'jscause.org">8j', 'jscause.org</a>'].join('@'))</script></li>
+</ul>
 
       </div>
       <div class="topmenu">
@@ -99,7 +120,7 @@
 
       </div>
       <footer>
-          &copy; 2020 EighthJouster
+          This website is &copy; 2020 EighthJouster.  No cookies are used in this site.
       </footer>
   </body>
 </html>
