--- a/docs.html
+++ b/docs.html
@@ -3025,7 +3025,7 @@ the <a href="https://github.com/pillarjs/cookies">Cookies NodeJS module</a>.</p>
 
       </div>
       <footer>
-          &copy; 2020 EighthJouster
+          This website is &copy; 2020 EighthJouster.  No cookies are used in this site.
       </footer>
   </body>
 </html>
