--- a/tutorial.html
+++ b/tutorial.html
@@ -1575,7 +1575,7 @@ tutorial_014_tomato_salad.png
 
       </div>
       <footer>
-          &copy; 2020 EighthJouster
+          This website is &copy; 2020 EighthJouster.  No cookies are used in this site.
       </footer>
   </body>
 </html>
