--- a/404.html
+++ b/404.html
@@ -58,7 +58,7 @@
 
       </div>
       <footer>
-          &copy; 2020 EighthJouster
+          This website is &copy; 2020 EighthJouster.  No cookies are used in this site.
       </footer>
   </body>
 </html>
