--- a/download.html
+++ b/download.html
@@ -133,7 +133,7 @@
 
       </div>
       <footer>
-          &copy; 2020 EighthJouster
+          This website is &copy; 2020 EighthJouster.  No cookies are used in this site.
       </footer>
   </body>
 </html>
