--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
       </div>
       <footer>
-          &copy; 2020 EighthJouster
+          This website is &copy; 2020 EighthJouster.  No cookies are used in this site.
       </footer>
   </body>
 </html>
