Small mobile tweak; typo.

--- a/download.html
+++ b/download.html
@@ -57,7 +57,7 @@
       <div class="content">
           <p>The current version is <a href="https://github.com/eighthjouster/jscause/releases/tag/V0.9.4-alpha">V0.9.4</a>.</p>
 
-<p>There are to download options:</p>
+<p>There are two download options:</p>
 
 <h2 id="option-1-stand-alone-package-it-only-requires-nodejs">Option 1: Stand-alone package (it only requires NodeJS)</h2>
 <p><a href="https://github.com/eighthjouster/jscause/releases/download/V0.9.4-alpha/jscause_standalone-0.9.4-alpha.zip">Download jscause_standalone-0.9.4-alpha.zip</a> from our <a href="https://github.com/eighthjouster/jscause/releases">Github releases page</a>.</p>
