--- a/download.html
+++ b/download.html
@@ -57,6 +57,8 @@
       <div class="content">
           <p>The current version is <a href="https://github.com/eighthjouster/jscause/releases/tag/V0.9.4-alpha">V0.9.4</a>.</p>
 
+<p>JSCause requires <a href="https://nodejs.org">NodeJS</a>.  Please make sure you have it installed in your system.  Any version equal or above 12.x should be fine.</p>
+
 <p>There are two download options:</p>
 
 <h2 id="option-1-stand-alone-package-it-only-requires-nodejs">Option 1: Stand-alone package (it only requires NodeJS)</h2>
